feat: add paragraf

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <h1>Hello Word</h1>
+  <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatum molestias quas impedit? Qui quisquam consequuntur commodi earum voluptas optio culpa corrupti eligendi repellat, neque eveniet ut officiis quidem accusamus aut facilis consectetur. Ratione, molestiae?</p>
 </body>
 </html>
